dhcp4 (wlp1s0): could not get netmask from lease
Hi,
OS is fedora 35, if relefant and i don't get an IP from DHCP with error could not get netmask from lease.
Nov 15 16:36:14 fedora NetworkManager[871]: [1636990574.4175] dhcp4 (wlp1s0): client event 7
Nov 15 16:36:14 fedora NetworkManager[871]: [1636990574.4176] dhcp4 (wlp1s0): send DISCOVER to 255.255.255.255
Nov 15 16:36:14 fedora NetworkManager[871]: [1636990574.4177] device[ba6e414a9c25cb12] (wlp1s0): ip6-config: update (commit=>
Nov 15 16:36:14 fedora NetworkManager[871]: [1636990574.4255] dhcp4 (wlp1s0): client event 7
Nov 15 16:36:14 fedora NetworkManager[871]: [1636990574.4256] dhcp4 (wlp1s0): received OFFER of 172.31.99.141 from 172.31.98.1>
Nov 15 16:36:14 fedora NetworkManager[871]: [1636990574.4256] dhcp4 (wlp1s0): client event 1
Nov 15 16:36:14 fedora NetworkManager[871]: [1636990574.4256] dhcp4 (wlp1s0): client event 7
Nov 15 16:36:14 fedora NetworkManager[871]: [1636990574.4256] dhcp4 (wlp1s0): send REQUEST of 172.31.99.141 to 255.255.255.2>
Nov 15 16:36:14 fedora NetworkManager[871]: [1636990574.4400] dhcp4 (wlp1s0): client event 7
Nov 15 16:36:14 fedora NetworkManager[871]: [1636990574.4400] dhcp4 (wlp1s0): received ACK of 172.31.99.141 from 172.31.98.1
Nov 15 16:36:14 fedora NetworkManager[871]: [1636990574.4401] dhcp4 (wlp1s0): client event 2
Nov 15 16:36:14 fedora NetworkManager[871]: [1636990574.4401] dhcp4 (wlp1s0): lease available (new)
Nov 15 16:36:14 fedora NetworkManager[871]: [1636990574.4401] dhcp4 (wlp1s0): could not get netmask from lease
Nov 15 16:36:14 fedora NetworkManager[871]: [1636990574.4401] dhcp4 (wlp1s0): state changed unknown -> fail\
Wireshark says DHCP Option 1: Netmask is sent to me: 255.255.254.0
Sorry, my Laptop accu ran out of energy while writing it, the log output is bit crapped. I will reupload the Log tomorrow. However the relevant part is inside, i think: REQUEST, OFFER, ACK > could not get netmask from lease.
All other clients, which are Mac, Windows, perhaps some Linux (i don't know for sure, it is a customer wifi, don't have any problems).
Regards
Sören